feat: added favourite courses for students endpoint and tests
